--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -174,7 +174,7 @@
                                 </button>
                             </form>
                         {% else %}
-                            <a href="{% url 'login' %}" class="flex items-center px-4 py-2 text-sm text-gray-900 hover:bg-gray-50">
+                            <a href="/" class="flex items-center px-4 py-2 text-sm text-gray-900 hover:bg-gray-50">
                                 <!-- Heroicon: arrow-right-on-rectangle -->
                                 <svg class="w-4 h-4 mr-3 text-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 16l-4-4m0 0l4-4m-4 4h14m-5 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h7a3 3 0 013 3v1"/>
