--- a/templates/authentication/django_login.html
+++ b/templates/authentication/django_login.html
@@ -97,7 +97,7 @@
 
             <div class="mt-6 border-t pt-6">
                 <div class="text-center">
-                    <a href="{% url 'login' %}" class="text-sm text-pizza-600 hover:text-pizza-500">
+                    <a href="/" class="text-sm text-pizza-600 hover:text-pizza-500">
                         ← Voltar para login Supabase
                     </a>
                 </div>
