--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -17,7 +17,7 @@
         </h2>
         <p class="mt-2 text-center text-sm text-gray-600">
             Ou
-            <a href="{% url 'login' %}" class="font-medium text-pizza-600 hover:text-pizza-500 transition-colors duration-200">
+            <a href="/" class="font-medium text-pizza-600 hover:text-pizza-500 transition-colors duration-200">
                 faça login se já tem uma conta
             </a>
         </p>
